connected mongodb and made users schema, model

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TMDB_API_KEY=cba66f0233e9b6b8bcab8fec1f67e336
 TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w500
+MONGODB_URI=mongodb+srv://golamsaruar004:pnqKt0pETBxDq8re@cluster0.6m6u7.mongodb.net/moviedb?retryWrites=true&w=majority
