--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "daisyui": "^4.12.23",
+    "mongoose": "^8.9.3",
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18"
